[gd_scene load_steps=23 format=3 uid="uid://pgobm7erc1f0"]

[ext_resource type="Script" path="res://scene/player/playerRoot.gd" id="1_csk4w"]
[ext_resource type="PackedScene" uid="uid://bf1f5117fhyd2" path="res://scene/car/car_panel.tscn" id="2_gx8xt"]
[ext_resource type="StyleBox" uid="uid://dl1e0qtgp13cj" path="res://style/style_box_basic.tres" id="3_eocbu"]
[ext_resource type="Script" path="res://scene/player/Timer.gd" id="3_hepv3"]
[ext_resource type="Shader" uid="uid://b5xo6d4thuug" path="res://shader/flatTextNoTime.tres" id="4_0qxgv"]
[ext_resource type="Texture2D" uid="uid://dt60dhhtejv7k" path="res://texture/icon/slotMachine.png" id="4_bmve1"]
[ext_resource type="Theme" uid="uid://co40pijjc7hbw" path="res://style/roadRogue.tres" id="4_xbt3u"]
[ext_resource type="Texture2D" uid="uid://w03tvhxtmrv4" path="res://texture/icon/icons8-coin-48 (1).png" id="5_bieyt"]
[ext_resource type="Shader" path="res://shader/3dtext.gdshader" id="5_nv3yj"]
[ext_resource type="Material" uid="uid://d0lj6sppa3i0j" path="res://shader/fancy_flat_text.tres" id="5_ykxgr"]
[ext_resource type="StyleBox" uid="uid://cjukasfxrv1k3" path="res://style/stylboxbox_progressbarBackground.tres" id="6_2f1vc"]
[ext_resource type="Texture2D" uid="uid://clb0tyqiwegeo" path="res://texture/icon/icons8-gem-48.png" id="6_domly"]
[ext_resource type="Material" uid="uid://c4e4nqe6cks3c" path="res://shader/rainbow_shader.tres" id="7_5jeqs"]
[ext_resource type="Material" uid="uid://d4nw1uchte7mv" path="res://scene/player/menu/main/3dText_Common.tres" id="7_kow26"]
[ext_resource type="PackedScene" uid="uid://cyyns0r3734ni" path="res://scene/player/regionUi.tscn" id="10_ep2ps"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_spkbp"]
resource_local_to_scene = true
shader = ExtResource("4_0qxgv")
shader_parameter/angle = 0.0
shader_parameter/thickness = 1.0
shader_parameter/scale = 1.0
shader_parameter/shear = Vector2(0, -0.2)
shader_parameter/slices = 1
shader_parameter/outline = true
shader_parameter/outline_width = 2.0
shader_parameter/front_tex = ExtResource("4_bmve1")
shader_parameter/show_bound = false

[sub_resource type="Gradient" id="Gradient_ihyl7"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_bun2y"]
gradient = SubResource("Gradient_ihyl7")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ar1ql"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kjv7t"]
resource_local_to_scene = true
shader = ExtResource("5_nv3yj")
shader_parameter/angle = 0.6
shader_parameter/thickness = 5.0
shader_parameter/scale = 1.0
shader_parameter/shear = Vector2(0, -0.2)
shader_parameter/slices = 16
shader_parameter/outline = true
shader_parameter/outline_width = 2.0
shader_parameter/front_tex = ExtResource("5_bieyt")
shader_parameter/back_tex = ExtResource("5_bieyt")
shader_parameter/show_bound = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_k4tkc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bqu5y"]
resource_local_to_scene = true
shader = ExtResource("5_nv3yj")
shader_parameter/angle = 0.6
shader_parameter/thickness = 5.0
shader_parameter/scale = 1.0
shader_parameter/shear = Vector2(0, -0.2)
shader_parameter/slices = 16
shader_parameter/outline = true
shader_parameter/outline_width = 2.0
shader_parameter/front_tex = ExtResource("6_domly")
shader_parameter/back_tex = ExtResource("6_domly")
shader_parameter/show_bound = false

[node name="PlayerRoot" type="CanvasLayer" groups=["playerGameUi"]]
process_mode = 3
layer = 3
script = ExtResource("1_csk4w")

[node name="carPanel" parent="." instance=ExtResource("2_gx8xt")]

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 60)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -326.0
offset_bottom = 60.0
grow_horizontal = 0
size_flags_horizontal = 3
theme = ExtResource("4_xbt3u")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 7.0
offset_top = -25.0
offset_right = -12.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer"]
material = SubResource("ShaderMaterial_spkbp")
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("4_bmve1")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
material = ExtResource("5_ykxgr")
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_xbt3u")
theme_override_font_sizes/font_size = 24
text = "CRUSH "
horizontal_alignment = 1

[node name="crushedGoons" type="Label" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer" groups=["currentGoonsCrushedui"]]
unique_name_in_owner = true
material = ExtResource("5_ykxgr")
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_xbt3u")
theme_override_font_sizes/font_size = 24
text = "20"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
material = ExtResource("5_ykxgr")
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("4_xbt3u")
theme_override_font_sizes/font_size = 24
text = " GOONS"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
theme_override_styles/panel = ExtResource("6_2f1vc")

[node name="ProgressBar" type="TextureProgressBar" parent="Panel/HBoxContainer/VBoxContainer/Panel"]
unique_name_in_owner = true
material = ExtResource("7_5jeqs")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
max_value = 5.0
value = 3.0
nine_patch_stretch = true
texture_progress = SubResource("GradientTexture1D_bun2y")

[node name="Panel2" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -125.0
offset_top = 64.0
offset_bottom = 124.0
grow_horizontal = 0
size_flags_horizontal = 3
theme = ExtResource("4_xbt3u")
theme_override_styles/panel = SubResource("StyleBoxEmpty_ar1ql")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 2.0
offset_right = -6.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel2/HBoxContainer" groups=["coinui"]]
material = SubResource("ShaderMaterial_kjv7t")
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("5_bieyt")
expand_mode = 1
stretch_mode = 5

[node name="coins" type="Label" parent="Panel2/HBoxContainer"]
unique_name_in_owner = true
material = ExtResource("7_kow26")
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="Panel4" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -268.0
offset_top = 64.0
offset_right = -135.0
offset_bottom = 124.0
grow_horizontal = 0
size_flags_horizontal = 3
theme = ExtResource("4_xbt3u")
theme_override_styles/panel = SubResource("StyleBoxEmpty_k4tkc")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel4"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 2.0
offset_right = -9.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel4/HBoxContainer" groups=["gemui"]]
material = SubResource("ShaderMaterial_bqu5y")
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_domly")
expand_mode = 1
stretch_mode = 5

[node name="gem" type="Label" parent="Panel4/HBoxContainer"]
unique_name_in_owner = true
material = ExtResource("7_kow26")
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 30
text = "0"
horizontal_alignment = 1

[node name="Panel3" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.0
offset_right = 92.0
offset_bottom = 65.0
grow_horizontal = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("3_eocbu")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Label" parent="Panel3/HBoxContainer" groups=["runTimer"]]
process_mode = 1
material = ExtResource("7_kow26")
layout_mode = 2
size_flags_horizontal = 6
theme = ExtResource("4_xbt3u")
theme_override_font_sizes/font_size = 40
text = "00 : 00"
horizontal_alignment = 1
script = ExtResource("3_hepv3")

[node name="gearbox" type="Label" parent="." groups=["gearui"]]
material = ExtResource("7_kow26")
offset_left = 185.0
offset_top = 122.0
offset_right = 214.0
offset_bottom = 174.0
theme = ExtResource("4_xbt3u")
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 40
text = "N"

[node name="regionUi" parent="." instance=ExtResource("10_ep2ps")]
unique_name_in_owner = true
offset_top = -161.0
